Atcoder/外部コンテスト過去問(Rated)/黄/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/外部コンテスト過去問/黄/M-SOLUTIONSプロコンオープン2020F.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/外部コンテスト過去問/黄/M-SOLUTIONSプロコンオープン2020F.cpp:381:17: error: expected primary-expression before ']' token
  381 |       out(vy_x1[]);
      |                 ^
